--- a/frontEnd/MyApplication/app/src/main/res/values/strings.xml
+++ b/frontEnd/MyApplication/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Heyu Clinic</string>
     <string name="one_time_registration">ONE TIME REGISTRATION</string>
 </resources>
